# dioxus-static-site

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yaml
