[package]
name = "dioxus-static-site"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dioxus = { version = "0.5", features = ["router"] }
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", features = [
  "static-generation",
  "router",
] }
dioxus-static-site-generation = { git = "https://github.com/DioxusLabs/dioxus.git" }
tower = { version = "0.5", features = ["util"] }
tracing-subscriber = "0.3.18"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
